# AutomaticOrder

./: .deployment_ready  .gitignore  BUGFIX_RECIPE_SAVE.md  CAMERA_AND_ALGORITHM_FIX.md  CAMERA_OPTIMIZATION.md  CLEAR_CACHE_GUIDE.md  COVERAGE_THRESHOLD_ADJUSTMENT.md  DEPLOYMENT_GUIDE_DM_CAMERA.md  DM_CAMERA_COMPLETION_REPORT.txt  DM_CAMERA_INTEGRATION_SUMMARY.md  DM_CAMERA_PROJECT_SUMMARY.md  DM_CAMERA_QUICKSTART.md  DM_CAMERA_README.md  DM_CAMERA_START_HERE.md  Env.json  FOAM_DETECTION_FIX_FINAL.md  FOAM_DETECTION_FIX_SUMMARY.md  FOAM_DETECTION_README.md  FOAM_DETECTION_TUNING.md  FOAM_FIX_COMPLETE.md  FOAM_INSPECTOR_GUIDE.md  HIK_CAMERA_FIX_README.md  QUICK_START.md  README_DM_CAMERA.md  RECIPE_CRUD_GUIDE.md  RECIPE_CRUD_SUMMARY.md  RECIPE_TROUBLESHOOTING.md  RECIPE_UI_UPDATE.md  SDK_COPY_COMPLETION.txt  SDK_FILES_REFERENCE_LIST.md  SDK_FINAL_VERIFICATION_REPORT.md  SDK_MIGRATION_GUIDE.md  TOAST_DEMO.md  VISION_DATABASE_FIX.md  VISION_RECIPE_IMPLEMENTATION.md  append_imageio.py  append_rack.py  check_db_columns.py  check_dm_camera_setup.py  cleanup_vision_records.py  (+30 more)
3d_SDK/: tofconfig  tofconfig.backup
AutomaticOrder/: asgi.py  settings.py  urls.py  wsgi.py
Hik_camera/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  camera_example.py  config_example.py  example.py  pyproject.toml
Hik_camera/src/: config.rs  lib.rs  main.rs
apps/alarms/: admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
docs/: FOAM_INSPECTION_DEPLOYMENT.md  架构设计与项目骨架.md  重构3D深度相机料架定位功能.md  需求文档.md
templates/: base.html  dashboard.html  dm_camera_demo.html
(+143 files in other folders)
